- fix "Open R Script File" filename ending filter
- add mismatching brace detection to syntax highlighting
- yet another crash on more than 100 rows bug fixed
- RKWard should now be fully UTF-8 aware. All characters are passed to and from R reliably

--- Version 0.3.7 - Sep-17-2006
- added Turkish translation
- avoid lockups when cancelling a readline ()
- show output context (if any) when the backend asks for input via readline ()
- link against libRblas.so if it is found in the R libs dir (needed for some compiles of R 2.4.0)
- remove whitespace from start and end of plugin generated commands and do not evaluate empty commands
- do not raise the command log more than once for a given command producing continuous output
- small improvements to command history in console
- deal better with commands producing large amounts of output
- small fixes in several plugins
- package installation/update: semi-automate package installation in response to "require ()" calls
- package installation/update: the online list of available packages is cached up to one hour (and only as long as the relevant options are unchanged)
- package installation/update: give better progress indication
- package installation/update: package dependencies are handled correctly when installating new packages
- package installation/update: packages can be installed to custom library locations
- fix spurious line breaks in output in command log and console
- Improved syntax highlighting defintion including code folding
- fix compilation with GCC 4.1
- don't crash on more than 100 rows of data in the editor (off by 2 bug in storage allocation)
- correctly initialize the internal NaN representation (would sometimes be initialized to 0, resulting in 0s not to be shown in the editor)
- engine status bar label ("R engine busy/idle") now changes background color according to state
- honor DESTDIR setting while installing rkward R package, and add configure option --with-r-libdir